Support some more coins for trading.

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -1376,6 +1376,11 @@ to {
 	padding: 12px 24px !important
 }
 
+.w3-padding-table {
+	padding-top: 8px;
+	padding-bottom: 60px
+}
+
 .w3-padding-16 {
 	padding-top: 16px !important;
 	padding-bottom: 16px !important
